# pendragon-client-portal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/auth/: dependencies.py  hashing.py  permissions.py  tokens.py
app/core/: config.py  database.py  exceptions.py
app/db/: demo_queries.py  seed.py  session.py
app/models/: __init__.py  audit_log.py  base.py  company.py  equipment.py  history_event.py  service_job.py  service_job_item.py  service_job_item_note.py  service_job_item_timeline.py  service_job_timeline.py  user.py  user_invitation.py  user_session.py
app/routes/: account_activation.py  auth.py  companies.py  dashboard.py  equipment.py  invitations.py  service_job_items.py  service_jobs.py
app/schemas/: account_activation.py  auth.py  company.py  dashboard.py  equipment.py  invitation.py  service_job.py  service_job_item.py  service_job_timeline.py
app/services/: account_activation_service.py  audit_service.py  auth_service.py  dashboard_service.py  equipment_history_service.py  equipment_service.py  invitation_service.py  service_job_item_service.py  service_job_item_timeline_service.py  service_job_service.py  service_job_timeline_service.py  session_service.py
docs/: development.md  project_principles.md
migrations/: env.py
pendragon_client_portal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: migrate-dev.ps1  migrate-test.ps1  restart.ps1  shell.ps1  test.ps1
tests/: conftest.py  database.py  test_health.py  test_service_job_item.py
(+43 files in other folders)
