[project]
name = "pendragon-client-portal"
version = "0.1.0"
description = "Secure customer portal built with FastAPI and PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg[binary]",
    "pydantic-settings",
    "pytest",
    "httpx"
]

[tool.pytest.ini_options]
testpaths = ["tests"]